spacing fixes required

--- a/style.css
+++ b/style.css
@@ -91,7 +91,6 @@ body {
 .column{
   float: left;
   width: 50%;
-  margin-bottom: 30px;
 }
 
 .column h2{
@@ -100,7 +99,7 @@ padding-left: 70px;
 padding-right: 70px;
 font-weight: 300;
 color: rgb(10,10,10);
-margin-bottom: 10px;
+margin-bottom: 40px;
 }
 
 
@@ -114,7 +113,6 @@ margin-bottom: 10px;
   text-decoration: none;
   font-weight: 600;
   margin-bottom: 20px;
-  margin-top: 50px;
 }
 
 .github a:link{
@@ -144,4 +142,3 @@ margin-bottom: 10px;
   width: 50%;
   font-weight: 300;
 }
-
